<resources>
    <string name="app_name">Glasses SDK Sample</string>
    <string name="text_1">Scan</string>
    <string name="text_2">Reconnect</string>
    <string name="text_3">Disconnect</string>
    <string name="text_4">Set Time</string>
    <string name="text_22">Connecting…</string>
    <string name="text_5">Get Version</string>
    <string name="text_6">Capture</string>
    <string name="text_7">Record Video</string>
    <string name="text_8">Record Audio</string>
    <string name="text_9">AI Capture &amp; Identify</string>
    <string name="text_10">BT Pairing</string>
    <string name="text_11">Register Event Listener</string>
    <string name="text_12">Battery</string>
    <string name="text_13">Read Volume</string>
    <string name="text_14">Check Media Count</string>
    <string name="text_15">BLE + Wi-Fi P2P Download</string>
    <string name="scan_devices">Scan Devices</string>
    <string name="scan_device_hint">Make sure Bluetooth is enabled and tap scan to discover nearby glasses.</string>
    <string name="main_title">Glasses SDK Sample</string>
    <string name="main_subtitle">Control and test connected glasses features</string>
    <string name="device_controls">Device Controls</string>
    <string name="media_and_ai">Media &amp; AI</string>
</resources>